--- a/index.html
+++ b/index.html
@@ -30,77 +30,77 @@
     </div>
 
     <div class="header">
-	<div class="header-main w1000">
-		<div class="logo"><a href="index.html"><img src="./image/logo.png" alt="首页" ></a></div>
-		
-		<div class="menub">
-			<b></b>
-			<ul>
-				<li class="ho on">
-					<a href="/index/about/" class="btit">关于我们</a>
-					<!--<div class="subnav" style="width:500px;">-->
-						<!--<a href="index.php/about/profile/index.htm">品牌简介</a><span>·</span>-->
-						<!--<a href="index.php/about/culture/index.htm">品牌文化</a><span>·</span>-->
-						<!--<a href="./about/course.htm">取暖历程</a><span>·</span>-->
-						<!--<a href="index.php/about/honor/index.htm">荣誉资质</a><span>·</span>-->
-						<!--<a href="index.php/about/honor#1/index.htm">人才策略</a>-->
-					<!--</div>-->
-				</li>
-				<li class="ho">
-					<a href="/index/product/" class="btit">产品中心</a>
-					<!--<div class="subnav" style="width:500px;">-->
-						<!---->
-						<!--<a href="index.php/product/advantage/index.htm">产品介绍</a><span>·</span>-->
-						<!--<a href="index.php/product/index.htm">产品展示</a><span>·</span>-->
-						<!--<a href="index.php/product/detailed/index.htm">安装说明</a>-->
-                        <!--&lt;!&ndash;<a href="http://lvwarm.com/index.php/product/advantage">产品优势</a>&ndash;&gt;-->
-					<!--</div>-->
-				</li>
-				<li class="ho">
-					<a href="/index/news/" class="btit">新闻中心</a>
-					<!--<div class="subnav" style="width:400px;">-->
-						<!--<a class="first" href="index.php/manage/index.htm">品牌资讯</a><span>·</span>-->
-						<!--<a href="index.php/manage/33/index.htm">热门观点</a><span>·</span>-->
-						<!--<a href="index.php/manage/34/index.htm">家居动态</a><span>·</span>-->
-						<!--<a href="index.php/manage/video/index.htm">精彩视频</a>-->
-					<!--</div>-->
-				</li>
-				<!--<li class="ho">-->
-					<!--<a href="index.php/mobile/index.htm" class="btit">招商加盟</a>-->
-					<!--<div class="subnav" style="width:400px;">-->
-                        <!--<a class="first" href="index.php/mobile_ACFBB307">加盟优势</a><span>·</span>-->
-                        <!--<a class="first" href="index.php/mobile_23FC827D">体验中心展示</a><span>·</span>-->
-                        <!--<a class="first" href="index.php/mobile_9B05D3F3">如何加盟</a><span>·</span>-->
-                        <!--<a class="first" href="index.php/mobile_4602E361">申请加盟</a>-->
-					<!--</div> -->
-				<!--</li>-->
-				<!--<li class="ho">-->
-					<!--<a href="index.php/list/index.htm" class="btit">客户案例</a>-->
-					 <!--<div class="subnav" style="width:400px;">-->
-						<!--<a class="first" href="index.php/list/list/6/index.htm">新房安装</a><span>·</span>-->
-						 <!--<a href="index.php/list/list/7/index.htm">老房改造</a><span>·</span>-->
-                         <!--<a href="index.php/list/list/8/index.htm">工程案例</a>-->
-					<!--</div> -->
-				<!--</li>-->
-				<!--<li class="ho">-->
-					<!--<a href="index.php/design/index.htm" class="btit">服务中心</a>-->
-					 <!--<div class="subnav" style="width:400px;left:auto;left:-10px;">-->
-					<!--<a class="first" href="index.php/design_ACFBB307">服务理念</a><span>·</span>-->
-						<!--<a href="index.php/design_23FC827D">服务支持</a><span>·</span>-->
-                         <!--<a href="index.php/design/home/index.htm">家居顾问</a>-->
-					<!--</div>-->
-				<!--</li>-->
-				<li class="ho">
-					<a href="/index/contact/" class="btit">联系我们</a>
-				</li>
-			</ul>
-		</div>
-		<!--<div class="right">-->
-			<!--<a href="">网上商城</a>-->
-		<!--</div>-->
-	</div>
-	<div class="bg"></div>
-</div>
+        <div class="header-main w1000">
+            <div class="logo"><a href="index.html"><img src="./image/logo.png" height="60" alt="首页" ></a></div>
+
+            <div class="menub">
+                <b></b>
+                <ul>
+                    <li class="ho on">
+                        <a href="/index/about/" class="btit">关于我们</a>
+                        <!--<div class="subnav" style="width:500px;">-->
+                            <!--<a href="index.php/about/profile/index.htm">品牌简介</a><span>·</span>-->
+                            <!--<a href="index.php/about/culture/index.htm">品牌文化</a><span>·</span>-->
+                            <!--<a href="./about/course.htm">取暖历程</a><span>·</span>-->
+                            <!--<a href="index.php/about/honor/index.htm">荣誉资质</a><span>·</span>-->
+                            <!--<a href="index.php/about/honor#1/index.htm">人才策略</a>-->
+                        <!--</div>-->
+                    </li>
+                    <li class="ho">
+                        <a href="/index/product/" class="btit">产品中心</a>
+                        <!--<div class="subnav" style="width:500px;">-->
+                            <!---->
+                            <!--<a href="index.php/product/advantage/index.htm">产品介绍</a><span>·</span>-->
+                            <!--<a href="index.php/product/index.htm">产品展示</a><span>·</span>-->
+                            <!--<a href="index.php/product/detailed/index.htm">安装说明</a>-->
+                            <!--&lt;!&ndash;<a href="http://lvwarm.com/index.php/product/advantage">产品优势</a>&ndash;&gt;-->
+                        <!--</div>-->
+                    </li>
+                    <li class="ho">
+                        <a href="/index/news/" class="btit">新闻中心</a>
+                        <!--<div class="subnav" style="width:400px;">-->
+                            <!--<a class="first" href="index.php/manage/index.htm">品牌资讯</a><span>·</span>-->
+                            <!--<a href="index.php/manage/33/index.htm">热门观点</a><span>·</span>-->
+                            <!--<a href="index.php/manage/34/index.htm">家居动态</a><span>·</span>-->
+                            <!--<a href="index.php/manage/video/index.htm">精彩视频</a>-->
+                        <!--</div>-->
+                    </li>
+                    <!--<li class="ho">-->
+                        <!--<a href="index.php/mobile/index.htm" class="btit">招商加盟</a>-->
+                        <!--<div class="subnav" style="width:400px;">-->
+                            <!--<a class="first" href="index.php/mobile_ACFBB307">加盟优势</a><span>·</span>-->
+                            <!--<a class="first" href="index.php/mobile_23FC827D">体验中心展示</a><span>·</span>-->
+                            <!--<a class="first" href="index.php/mobile_9B05D3F3">如何加盟</a><span>·</span>-->
+                            <!--<a class="first" href="index.php/mobile_4602E361">申请加盟</a>-->
+                        <!--</div> -->
+                    <!--</li>-->
+                    <!--<li class="ho">-->
+                        <!--<a href="index.php/list/index.htm" class="btit">客户案例</a>-->
+                         <!--<div class="subnav" style="width:400px;">-->
+                            <!--<a class="first" href="index.php/list/list/6/index.htm">新房安装</a><span>·</span>-->
+                             <!--<a href="index.php/list/list/7/index.htm">老房改造</a><span>·</span>-->
+                             <!--<a href="index.php/list/list/8/index.htm">工程案例</a>-->
+                        <!--</div> -->
+                    <!--</li>-->
+                    <!--<li class="ho">-->
+                        <!--<a href="index.php/design/index.htm" class="btit">服务中心</a>-->
+                         <!--<div class="subnav" style="width:400px;left:auto;left:-10px;">-->
+                        <!--<a class="first" href="index.php/design_ACFBB307">服务理念</a><span>·</span>-->
+                            <!--<a href="index.php/design_23FC827D">服务支持</a><span>·</span>-->
+                             <!--<a href="index.php/design/home/index.htm">家居顾问</a>-->
+                        <!--</div>-->
+                    <!--</li>-->
+                    <li class="ho">
+                        <a href="/index/contact/" class="btit">联系我们</a>
+                    </li>
+                </ul>
+            </div>
+            <!--<div class="right">-->
+                <!--<a href="">网上商城</a>-->
+            <!--</div>-->
+        </div>
+        <div class="bg"></div>
+    </div>
 
     <div class="lxfx">
         <ul>
@@ -145,56 +145,50 @@
 </script>
 
     <div class="banner">
-	<ul class="jslist">
-		<li style="background:url(http://lvwarm.com/upload/2015/05/04/143071052893l2fhr.jpg) no-repeat center">
-			<div class="bannertxt w1000">
-				<img src="static/web/img/home_14_E7A774CF.png" width="734" height="91" class="txt1">
-				<img src="static/web/img/home_18_E7A774CF.png" width="16" height="17" class="txt2">
-				<img src="static/web/img/home_22_E7A774CF.png" width="409" height="88" class="txt3">
-				<div class="ret">
-					<div class="wbb">
-						<div class="kd"></div>
-					</div>
-					<div class="wdn"><span>0</span>℃</div>
-				</div>
-			</div>
-		</li>
-		<li style="background:url(http://lvwarm.com/upload/2015/05/04/143071050934n1krp.jpg) no-repeat center">
-			<div class="bannertxt w1000">
-				<img src="static/web/img/home_14_E7A774CF.png" width="734" height="91" class="txt1">
-				<img src="static/web/img/home_18_E7A774CF.png" width="16" height="17" class="txt2">
-				<img src="static/web/img/home_22_E7A774CF.png" width="409" height="88" class="txt3">
-			</div>
-		</li>
-		<li style="background:url(http://lvwarm.com/upload/2015/05/04/143071051949qsifk.jpg) no-repeat center">
-			<div class="bannertxt w1000">
-				<img src="static/web/img/home_14_E7A774CF.png" width="734" height="91" class="txt1">
-				<img src="static/web/img/home_18_E7A774CF.png" width="16" height="17" class="txt2">
-				<img src="static/web/img/home_22_E7A774CF.png" width="409" height="88" class="txt3">
-			</div>
-		</li>
-	</ul>
-	<div class="number">
-		<span  class="current" ><i><div class="sz1"></div></i></span>
-		<span ><i><div class="sz2"></div></i></span>
-		<span ><i><div class="sz3"></div></i></span>
-	</div>
-</div>
+        <ul class="jslist">
+            <li style="background:url(image/banner_main_01.jpg) no-repeat center">
+                <div class="bannertxt w1000">
+                    <img src="image/banner_descript.png" class="txt1">
+                    <!--<img src="static/web/img/home_18_E7A774CF.png" width="16" height="17" class="txt2">-->
+                    <!--<img src="static/web/img/home_22_E7A774CF.png" width="409" height="88" class="txt3">-->
+                    <!--<div class="ret">-->
+                        <!--<div class="wbb">-->
+                            <!--<div class="kd"></div>-->
+                        <!--</div>-->
+                        <!--<div class="wdn"><span>0</span>℃</div>-->
+                    <!--</div>-->
+                </div>
+            </li>
+            <li style="background:url(image/banner_main_02.jpg) no-repeat center">
+                <div class="bannertxt w1000">
+                    <img src="image/banner_descript.png" class="txt1">
+                    <!--<img src="static/web/img/home_18_E7A774CF.png" width="16" height="17" class="txt2">-->
+                    <!--<img src="static/web/img/home_22_E7A774CF.png" width="409" height="88" class="txt3">-->
+                </div>
+            </li>
+        </ul>
+        <div class="number">
+            <span  class="current" ><i><div class="sz1"></div></i></span>
+            <span ><i><div class="sz2"></div></i></span>
+        </div>
+    </div>
 
-<div class="pro-se w1000">
-    <div class="pro-fi">
-    <div class="intoentit"><img src="../../../static/web/img/company_21_E7A774CF.png" alt="Brand Profile" width="326" height="34"></div>
-    <div class="intocntit">品牌简介</div>
-</div>
-    <div class="le">
-        <img src="../../../upload/2015/05/04/143071062579l2q8f.jpg" width="413" height="479"  >
+    <div class="pro-se w1000">
+        <div class="pro-fi">
+        <div class="intoentit"><img src="image/main_block01_title.jpg" alt=""></div>
+        <!--<div class="intocntit">品牌简介</div>-->
     </div>
-    <div class="ri">
-        <img src="../../../static/web/img/company_35_E7A774CF.jpg" width="473" height="106"><br><br>
-        <p class="p">浙江冬日暖阳电热科技有限公司作为一家与时俱进、专业化、现代化的企业，自成立以来，就以专业、专注的发热地板研发与制造而享誉国内外。在“温暖·家·生活”的品牌理念指引下，致力于家居生活暖文化的倡导和推广，重塑代表追求家居暖意需求的生活方式，倡导温暖低碳健康生活，并以其强大的品牌影响力，谱写暖爱家居真性情。</p><p class="p">冬日暖阳秉承“追求卓越管理、创造完美品质、奉献至诚服务”的质量方针，严格按照要求，对每一片地板以“精工、精艺、精品”为标准，以管理为基石，以科技为先导，引进发热地板先进生产流水线和全自动红外线检测系统。于2010年成功研发非金属发热体技术，推出更高科技含量的发热地板，热量通过远红外释放，使地板具有超强的单向面发热性，实现只装地板就有地暖。一经投入市场，便以其高效、环保、健康的显著优势，迅速得到热捧和好评。</p><p class="p">海阔凭鱼跃，天高任鸟飞，大鹏已展翅，当搏击长空。今天，冬日暖阳凭借雄厚的实力，强大的品牌实力，顶尖的工艺技术，优秀的人才团队，先进的管理理念，优质丰富的产品傲立在中国地面采暖行业的至高点上，谱写发热地板划时代新篇章。</p><br>
-        <img src="../../../static/web/img/company_40_E7A774CF.jpg" width="21" height="1">
+        <div class="le">
+            <img src="image/main_block01_pic1.jpg" width="540" height="480" style="left: 0; top: 60px;" >
+            <img src="image/main_block01_pic2.jpg" width="275" height="275" style="right: -174px; top: 0;" >
+
+        </div>
+        <div class="ri">
+            <!--<img src="../../../static/web/img/company_35_E7A774CF.jpg" width="473" height="106"><br><br>-->
+            <p class="p">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;在屋子里瑟瑟发抖的时候，小伙伴们是否想得到阳光的温暖感觉？现在，源自德国的M-Therm平面供暖系统能将“阳光”带入到你的房间啦！</p><p class="p">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;M-Therm平面供暖系统的技术核心，就是“新材料之王”石墨稀。作为目前发现的最薄、最坚硬、导电导热性能最强的一种新型纳米碳材料，石墨烯被科学家预言将“彻底改变21世纪。”通电后，其碳纤维中的碳分子做“布朗运动”，在产生热量的同时，会产生85%左右的远红外线来辐射热量。</p><p class="p">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;M-Therm电热膜正是应用了石墨烯的特性，膜体仅有0.5mm厚度，通电后1-2min就能向固体和液体辐射热量。而且纳米材料的石墨烯比之以往的碳材料更为稳定，使用寿命更长，因此除温控器和变压器可能需要更换外，使用M-Therm电热膜是无需维护的。</p><p class="p">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;可能有人会问，“电热膜的辐射对人体有害吗？”不用担心，石墨烯制热红外辐射，是用科学的技术传递自然的温暖。其产生的波长与人体发射出来的远红外线的波长相近，能与生物体内细胞的水分子产生最有效的“共振”；同时具备了渗透性能，促进新陈代谢。M-Therm电热膜辐射“生命之光”，对人体反而是有益无害的。</p><br>
+
+        </div>
     </div>
-</div>
 
     <div class="i-fi an-i">
         <div class="toentit"><img src="static/web/img/home_09_E7A774CF.png" alt="Warm    love notes" width="650" height="46"></div>
@@ -258,50 +252,58 @@
     </div>
 
     <div class="i-fo an-i">
-    	<div class="toentit"><img src="static/web/img/home_91_E7A774CF.png" alt="Merchants JOIN" width="515" height="46"></div>
-        <div class="tocntit">招商加盟</div>
-        <div class="tosentit"><img src="static/web/img/home_16_E7A774CF.png" alt="SCIENCE WARM GREEN HEALTH" width="194" height="18"></div>
+    	<div class="toentit"><img src="image/main_block03_title.jpg" alt=""></div>
+        <!--<div class="tocntit">招商加盟</div>-->
+        <!--<div class="tosentit"><img src="static/web/img/home_16_E7A774CF.png" alt="SCIENCE WARM GREEN HEALTH" width="194" height="18"></div>-->
         <div class="i-fob w1000">
         	<ul>
-        		<li class="even" style="background:url(http://lvwarm.com/static/web/img/home_95.jpg?v=v2) no-repeat center">
-        			<span class="bg"></span>
-        			<!--<span class="btit">加盟<br>优势</span>-->
-        			<div class="con">
-        				<a href="" class="tit">共创共赢</a><br>
-        				<span class="hr"></span><br>
-        				<span class="txt">冬日暖阳发热地板是采暖行业革命性的升级产品和发热地板行业的领导者。</span><br>
-        				<!--<a href="index.php/mobile_ACFBB307" class="more">+</a>-->
-        			</div>
+        		<li class="even" style="background:url(image/main_block03_pic1.jpg) no-repeat center">
+                    <a href="">
+                        <span class="bg"></span>
+                        <!--<span class="btit">加盟<br>优势</span>-->
+                        <div class="con">
+                             <span class="tit" style="margin-top: 140px;">西班牙别墅</span><br>
+                            <!--<span class="hr"></span><br>-->
+                            <!--<span class="txt">冬日暖阳发热地板是采暖行业革命性的升级产品和发热地板行业的领导者。</span><br>-->
+                            <!--<a href="index.php/mobile_ACFBB307" class="more">+</a>-->
+                        </div>
+                    </a>
         		</li>
-        		<li class="odd" style="background:url(http://lvwarm.com/static/web/img/home_95-02.jpg?v=v2) no-repeat center">
-        			<span class="bg"></span>
+        		<li class="odd" style="background:url(image/main_block03_pic2.jpg) no-repeat center">
+                    <a href="">
+                        <span class="bg"></span>
         			<!--<span class="btit">体验<br>中心</span>-->
-        			<div class="con">
-        				<a href="" class="tit">共创共赢</a><br>
-        				<span class="hr"></span><br>
-        				<span class="txt">让消费者零距离感受冬日暖阳高科技地暖一站式全景体验。</span><br>
-        				<!--<a href="index.php/mobile_23FC827D" class="more">+</a>-->
-        			</div>
+                        <div class="con">
+                            <span class="tit" style="margin-top: 140px;">德国单身公寓</span><br>
+                            <!--<span class="hr"></span><br>-->
+                            <!--<span class="txt">让消费者零距离感受冬日暖阳高科技地暖一站式全景体验。</span><br>-->
+                            <!--<a href="index.php/mobile_23FC827D" class="more">+</a>-->
+                        </div>
+                    </a>
         		</li>
-        		<li class="even" style="background:url(http://lvwarm.com/static/web/img/home_95-03.jpg?v=v2) no-repeat center">
-        			<span class="bg"></span>
-        			<!--<span class="btit">如何<br>加盟</span>-->
-        			<div class="con">
-        				<a href="" class="tit">共创共赢</a><br>
-        				<span class="hr"></span><br>
-        				<span class="txt">寻求渴望成功的伙伴一起成就冬日暖阳事业！</span><br>
-        				<!--<a href="index.php/mobile_9B05D3F3" class="more">+</a>-->
-        			</div>
+        		<li class="even" style="background:url(image/main_block03_pic3.jpg) no-repeat center">
+                    <a href="">
+                        <span class="bg"></span>
+                        <!--<span class="btit">如何<br>加盟</span>-->
+                        <div class="con">
+                            <span class="tit" style="margin-top: 140px;">中国酒店</span><br>
+                            <!--<span class="hr"></span><br>-->
+                            <!--<span class="txt">寻求渴望成功的伙伴一起成就冬日暖阳事业！</span><br>-->
+                            <!--<a href="index.php/mobile_9B05D3F3" class="more">+</a>-->
+                        </div>
+                    </a>
         		</li>
-        		<li class="odd" style="background:url(http://lvwarm.com/static/web/img/home_95-04.jpg?v=v2) no-repeat center">
-        			<span class="bg"></span>
-        			<!--<span class="btit">申请<br>加盟</span>-->
-        			<div class="con">
-        				<a href="" class="tit">共创共赢</a><br>
-        				<span class="hr"></span><br>
-        				<span class="txt">选择冬日暖阳，实现您成功事业梦想！</span><br>
-        				<!--<a href="index.php/mobile_4602E361" class="more">+</a>-->
-        			</div>
+        		<li class="odd" style="background:url(image/main_block03_pic4.jpg) no-repeat center">
+                    <a href="">
+                        <span class="bg"></span>
+                        <!--<span class="btit">申请<br>加盟</span>-->
+                        <div class="con">
+                            <span class="tit" style="margin-top: 140px;">宜兴度假村</span><br>
+                            <!--<span class="hr"></span><br>-->
+                            <!--<span class="txt">选择冬日暖阳，实现您成功事业梦想！</span><br>-->
+                            <!--<a href="index.php/mobile_4602E361" class="more">+</a>-->
+                        </div>
+                    </a>
         		</li>
         	</ul>
         </div>
