--- a/index/about/index.html
+++ b/index/about/index.html
@@ -26,15 +26,16 @@
 </head>
 
 <body>
+
     <div class="header">
 	    <div class="header-main w1000">
-		    <div class="logo"><a href="../../index.html"><img src="../../image/logo.png" alt="首页"></a></div>
+		    <div class="logo"><a href="../../index.html"><img src="../../image/logo.png" height="60" alt="首页"></a></div>
 		
             <div class="menub">
                 <b></b>
                 <ul>
                     <li class="ho on">
-                        <a href="index.html" class="btit">关于我们</a>
+                        <a href="../../index/about/" class="btit">关于我们</a>
                         <!--<div class="subnav" style="width:500px;">-->
                             <!--<a href="index.htm">品牌简介</a><span>·</span>-->
                             <!--<a href="../culture/index.htm">品牌文化</a><span>·</span>-->
@@ -44,7 +45,7 @@
                         <!--</div>-->
                     </li>
                     <li class="ho">
-                        <a href="../../product/advantage/index.htm" class="btit">产品中心</a>
+                        <a href="../../index/product/" class="btit">产品中心</a>
                         <!--<div class="subnav" style="width:500px;">-->
 
                             <!--<a href="../../product/advantage/index.htm">产品介绍</a><span>·</span>-->
@@ -54,7 +55,7 @@
                         <!--</div>-->
                     </li>
                     <li class="ho">
-                        <a href="../../manage/index.htm" class="btit">新闻中心</a>
+                        <a href="../../index/news/" class="btit">新闻中心</a>
                         <!--<div class="subnav" style="width:400px;">-->
                             <!--<a class="first" href="../../manage/index.htm">品牌资讯</a><span>·</span>-->
                             <!--<a href="../../manage/33/index.htm">热门观点</a><span>·</span>-->
@@ -141,57 +142,58 @@
         })
     </script>
 
-
-
-    <div class="in-banner" style="background:url(http://lvwarm.com/static/web/img/company_02.jpg?v=v2) no-repeat center">
-        <div class="bannertxt w1000">
-            <img src="../../../static/web/img/company_01_E7A774CF.png" width="852" height="88" class="txt1">
-            <div class="txt5">
-                <img src="../../../static/web/img/company_04_E7A774CF.png" width="176" height="18"  class="txt51">
-                <span class="hr"></span>
-                <span class="txt52">给你温暖的家</span>
-                <span class="txt53"><a href="index.htm">关于我们</a></span>
-                <a class="btn"></a>
-            </div>
-        </div>
+    <div class="in-banner" style="background:url(../../image/banner_about.jpg) no-repeat center">
+        <!--<div class="bannertxt w1000">-->
+            <!--<img src="../../image/banner_about.jpg" width="852" height="88" class="txt1">-->
+            <!--<div class="txt5">-->
+                <!--<img src="../../../static/web/img/company_04_E7A774CF.png" width="176" height="18"  class="txt51">-->
+                <!--<span class="hr"></span>-->
+                <!--<span class="txt52">给你温暖的家</span>-->
+                <!--<span class="txt53"><a href="index.htm">关于我们</a></span>-->
+                <!--<a class="btn"></a>-->
+            <!--</div>-->
+        <!--</div>-->
     </div>
    
-    <div class="pro-se w1000"><div class="pro-fi">
-            <div class="intoentit"><img src="../../../static/web/img/company_21_E7A774CF.png" alt="Brand Profile" width="326" height="34"></div>
-            <div class="intocntit">品牌简介</div>
+    <div class="pro-se w1000">
+        <div class="pro-fi">
+            <div class="intoentit">
+                <img src="../../image/about_block01_title.jpg" alt="">
+            </div>
+            <!--<div class="intocntit">品牌简介</div>-->
         </div>
         <div class="le">
-                <img src="../../../upload/2015/05/04/143071062579l2q8f.jpg" width="413" height="479"  >
-                </div>
+            <img src="../../image/about_block01_pic1.jpg"  />
+        </div>
         <div class="ri">
-            <img src="../../../static/web/img/company_35_E7A774CF.jpg" width="473" height="106"><br><br>
-            <p class="p">浙江冬日暖阳电热科技有限公司作为一家与时俱进、专业化、现代化的企业，自成立以来，就以专业、专注的发热地板研发与制造而享誉国内外。在“温暖·家·生活”的品牌理念指引下，致力于家居生活暖文化的倡导和推广，重塑代表追求家居暖意需求的生活方式，倡导温暖低碳健康生活，并以其强大的品牌影响力，谱写暖爱家居真性情。</p><p class="p">冬日暖阳秉承“追求卓越管理、创造完美品质、奉献至诚服务”的质量方针，严格按照要求，对每一片地板以“精工、精艺、精品”为标准，以管理为基石，以科技为先导，引进发热地板先进生产流水线和全自动红外线检测系统。于2010年成功研发非金属发热体技术，推出更高科技含量的发热地板，热量通过远红外释放，使地板具有超强的单向面发热性，实现只装地板就有地暖。一经投入市场，便以其高效、环保、健康的显著优势，迅速得到热捧和好评。</p><p class="p">海阔凭鱼跃，天高任鸟飞，大鹏已展翅，当搏击长空。今天，冬日暖阳凭借雄厚的实力，强大的品牌实力，顶尖的工艺技术，优秀的人才团队，先进的管理理念，优质丰富的产品傲立在中国地面采暖行业的至高点上，谱写发热地板划时代新篇章。</p><br>
-            <img src="../../../static/web/img/company_40_E7A774CF.jpg" width="21" height="1">
+            <!--<img src="../../../static/web/img/company_35_E7A774CF.jpg" width="473" height="106"><br><br>-->
+            <p class="p">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;M-Therm平面供暖系统源自德国，自2000年初开始研发，经历数次完善和修改，于2006年正式上市。发展至目前，在欧洲已有160多个代理商加盟销售，完成了多达3000多个工程类项目，规模可喜。产品已于2011年完成核心专利，并已通过德国莱茵TÜV技术检验认证（包括加热控制HSP 12A的EMC验证测试、加热控制HS12.2 / HS 6.2的EMC验证测试、CE安全测试、LVD低电压测试等）、德国DIN标准测试以及国内有关质量检验测试。</p><p class="p">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;苏州派涅尔作为M-Therm平面供暖系统的加盟代理商，拥有全国第一家产品体验中心，依附于出众的产品实力及强大的业务能力，目前应用于包括体育馆、养老院、办公楼、学校、医院、别墅、小区、酒店等在内的各种工程。吸引了全国各地工程公司的关注！</p><br>
+            <!--<img src="../../../static/web/img/company_40_E7A774CF.jpg" width="21" height="1">-->
         </div>
-        <div class="pro-se-th">
-            <div class="ul">
-                <div class="li">
-                    <img src="../../../static/web/img/company_45_E7A774CF.jpg" width="76" height="76">
-                    <div class="thtit">企业目标</div>
-                    <div class="thtxt">家居生活暖文化的创导者</div>
-                </div>
-                <div class="li">
-                    <img src="../../../static/web/img/company_47_E7A774CF.jpg" width="76" height="76">
-                    <div class="thtit">企业精神</div>
-                    <div class="thtxt">开拓创新 积极进取 认真负责  志美行厉 竭诚相待</div>
-                </div>
-                <div class="li">
-                    <img src="../../../static/web/img/company_50_E7A774CF.jpg" width="76" height="76">
-                    <div class="thtit">企业价值观</div>
-                    <div class="thtxt">博学笃志 共创共赢</div>
-                </div>
-                <div class="li">
-                    <img src="../../../static/web/img/company_52_E7A774CF.jpg" width="76" height="76">
-                    <div class="thtit">企业使命</div>
-                    <div class="thtxt">创造木价值 传递暖文化</div>
-                </div>
-            </div>
-        </div>
+        <!--<div class="pro-se-th">-->
+            <!--<div class="ul">-->
+                <!--<div class="li">-->
+                    <!--<img src="../../../static/web/img/company_45_E7A774CF.jpg" width="76" height="76">-->
+                    <!--<div class="thtit">企业目标</div>-->
+                    <!--<div class="thtxt">家居生活暖文化的创导者</div>-->
+                <!--</div>-->
+                <!--<div class="li">-->
+                    <!--<img src="../../../static/web/img/company_47_E7A774CF.jpg" width="76" height="76">-->
+                    <!--<div class="thtit">企业精神</div>-->
+                    <!--<div class="thtxt">开拓创新 积极进取 认真负责  志美行厉 竭诚相待</div>-->
+                <!--</div>-->
+                <!--<div class="li">-->
+                    <!--<img src="../../../static/web/img/company_50_E7A774CF.jpg" width="76" height="76">-->
+                    <!--<div class="thtit">企业价值观</div>-->
+                    <!--<div class="thtxt">博学笃志 共创共赢</div>-->
+                <!--</div>-->
+                <!--<div class="li">-->
+                    <!--<img src="../../../static/web/img/company_52_E7A774CF.jpg" width="76" height="76">-->
+                    <!--<div class="thtit">企业使命</div>-->
+                    <!--<div class="thtxt">创造木价值 传递暖文化</div>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</div>-->
     </div>
 
 
