--- a/index/product/index.html
+++ b/index/product/index.html
@@ -8,7 +8,7 @@
     <meta name="format-detection" content="telephone=no" />
     <meta name="Keywords" content="派涅尔"/>
     <meta name="renderer" content="webkit">
-    <title>派涅尔-关于我们</title>
+    <title>派涅尔-产品中心</title>
     <link href="../../favicon.ico" rel="shortcut icon">
     <link rel="stylesheet" href="../../css/reset.css" type="text/css" media="screen" charset="utf-8">
     <link rel="stylesheet" href="../../css/style.css" type="text/css" media="screen" charset="utf-8">
@@ -26,6 +26,7 @@
 </head>
 
 <body>
+
     <div class="header">
 	    <div class="header-main w1000">
 		    <div class="logo"><a href="../../index.html"><img src="../../image/logo.png" height="60" alt="首页"></a></div>
@@ -141,99 +142,55 @@
         })
     </script>
 
-
-
-    <div class="in-banner" style="background:url(http://lvwarm.com/static/web/img/company_02.jpg?v=v2) no-repeat center">
-        <div class="bannertxt w1000">
-            <img src="../../../static/web/img/company_01_E7A774CF.png" width="852" height="88" class="txt1">
-            <div class="txt5">
-                <img src="../../../static/web/img/company_04_E7A774CF.png" width="176" height="18"  class="txt51">
-                <span class="hr"></span>
-                <span class="txt52">给你温暖的家</span>
-                <span class="txt53"><a href="index.htm">关于我们</a></span>
-                <a class="btn"></a>
-            </div>
-        </div>
-    </div>
-
-    <div class="list-lx">
-
-        <div class="roop">
-            <h1>联系我们</h1>
-            <img src="../../image/bsg_51_13.jpg" alt="Brand Profile" width="120" height="15 ">
-            <div class="telphone">
-                <i></i>
-                <span>电话：400-688-2328</span>
-            </div>
-            <div class="where">
-                <i></i>
-                <span>地址：浙江省湖州市双林工业区</span>
-            </div>
-            <div style="width:320px;height:170px;margin:5px;border:#999 solid 1px;" id="dituContent"></div>
-            <!--<a href="javascript:void(0)" class="liuyan">在线留言</a>-->
-            <!--<img src="../../image/bsg_51_26.jpg" alt="Brand Profile" width="98" height="12">-->
-        </div>
-
-        <div class="erweima">
-            <!--<div class="forms">-->
-                <form>
-                    <div class="tit-ly">在线留言</div>
-                    <div class="inputs put">
-                        <label>姓名</label>
-                        <input type="text" name="title" id="title" class="int" />
-                        <span>*必填</span>
-                    </div>
-                    <div class="inputs-t put">
-                        <label>手机</label>
-                        <input type="text" name="tel" id="tel" class="int">
-                        <span>*必填</span>
-                    </div>
-                    <div class="inputs put">
-                        <label>地址</label>
-                        <input type="text" name="addr" id="addr" class="int">
-                        <span>*必填</span>
-                    </div>
-                    <div class="inputs-t put">
-                        <label>邮箱</label>
-                        <input type="text" name="email" id="email" class="int">
-                        <span></span>
-                    </div>
-                    <textarea class="textlst int" name="content" id="content" >   您的留言或宝贵意见</textarea>
-                    <input type="submit" class="submit-tj" value="提交留言">
-                </form>
-                <a href="javascript:void(0)" class="tj-close"></a>
+    <div class="in-banner" style="background:url(../../image/banner_about.jpg) no-repeat center">
+        <!--<div class="bannertxt w1000">-->
+            <!--<img src="../../image/banner_about.jpg" width="852" height="88" class="txt1">-->
+            <!--<div class="txt5">-->
+                <!--<img src="../../../static/web/img/company_04_E7A774CF.png" width="176" height="18"  class="txt51">-->
+                <!--<span class="hr"></span>-->
+                <!--<span class="txt52">给你温暖的家</span>-->
+                <!--<span class="txt53"><a href="index.htm">关于我们</a></span>-->
+                <!--<a class="btn"></a>-->
             <!--</div>-->
+        <!--</div>-->
+    </div>
+
+    <div class="sixebig">
+        <div class="content adven-list">
+            <div class="tit-gy-one adven">
+                <img src="../../../static/web/img/public/fw_53_E7A774CF.png" alt="Brand Profile" width="460" height="28">
+                <div class="company_detail"> <span class="two-sz">产品优势</span></div>
+            </div>
+            <ul class="bz-list">
+                <li class="bz-list-one">
+                    <div class="bz-bg once-one">值暖：只装地板，就有地暖</div>
+                    <p>只装地板就有地暖。一次消费可获得三种功能三种享受：地暖、地板、理疗。采用高档实木材质，商住两用。周到的售前、售中、售后服务，让客户满意，使用者安心。</p>            </li>
+                <li class="bz-list-two">
+                    <div class="bz-bg once-tw">质暖：安全可靠，稳定无忧</div>
+                    <p>独有的非金属发热体，具有不脱落、不断裂、耐腐、防水、阻燃等性能，绝缘达到3750V。获得欧盟CE认证。拥有高性能检测系统，智能化检测，确保安全，使用寿命长达20年以上。</p>            </li>
+                <li class="bz-list-one">
+                    <div class="bz-bg once-th">直暖：即开即热，节能高效</div>
+                    <p>成功运用多项节能技术，远红外发热，传热路径短，升温快，热效率和电热转化率高。即开即热，可实现15-30分钟达到预设温度的需求。智能温控系统，有效降低能耗。</p>            </li>
+                <li class="bz-list-two">
+                    <div class="bz-bg once-fo">智暖：安装便捷，智能温控</div>
+                    <p>集成一体，安装与普通地板一样简便，使用专用连接线一插即可，不伤地面墙面，一次性安装成型。智能化设计，可满足不同用户的个性化取暖需求。实现分时分区、随时开关、随心采暖的人性化需求，让您尊享健康智能化新生活。</p>            </li>
+                <li class="bz-list-one">
+                    <div class="bz-bg once-fi">只暖：科学采暖，舒适环保</div>
+                    <p>从古至今，木材都是最健康的地面材料，科学地避免了“地硬伤脑、地软伤身”的缺点。木
+                        材与地暖相结合是目前最为科学的采暖方式之一。远红外热辐射功能，有效促进人体血液循
+                        环，热量由下而上均匀恒流，“温足而凉顶”，完全符合人体生理需求。甲醛释放符合欧盟EO
+                        标准，为绿色、环保、节能、可持续发展产品。<br/></p>            </li>
+                <li class="bz-list-two">
+                    <div class="bz-bg once-si">稚暖：老房改造，轻松升级</div>
+                    <p>对于即便是已经装修入住的房屋，也能轻松实现地暖改造。避免传统地暖安装时的大兴土木
+                        和无谓浪费，安装便捷，即铺即用，不占空间，不占层高，是老房采暖，轻松升级的首选。
+                        让您安享温暖美好生活。</p>            </li>
+            </ul>
+            <div class="center-bold"></div>
         </div>
-
     </div>
 
 
-    <div class="pro-se w1000" style="margin-top: 0;padding-top: 0;padding-bottom: 40px;">
-    <div class="pro-se-th" style="padding-top: 40px;">
-    <div class="ul">
-    <div class="li" style="opacity:1; margin-right:126px">
-    <img src="../../../static/web/img/company_45_E7A774CF.jpg" width="76" height="76">
-    <div class="thtit">企业目标</div>
-    <div class="thtxt">家居生活暖文化的创导者</div>
-    </div>
-    <div class="li" style="opacity:1; margin-right:126px">
-    <img src="../../../static/web/img/company_47_E7A774CF.jpg" width="76" height="76">
-    <div class="thtit">企业精神</div>
-    <div class="thtxt">开拓创新 积极进取 认真负责  志美行厉 竭诚相待</div>
-    </div>
-    <div class="li" style="opacity:1; margin-right:126px">
-    <img src="../../../static/web/img/company_50_E7A774CF.jpg" width="76" height="76">
-    <div class="thtit">企业价值观</div>
-    <div class="thtxt">博学笃志 共创共赢</div>
-    </div>
-    <div class="li" style="opacity:1; margin-right:126px">
-    <img src="../../../static/web/img/company_52_E7A774CF.jpg" width="76" height="76">
-    <div class="thtit">企业使命</div>
-    <div class="thtxt">创造木价值 传递暖文化</div>
-    </div>
-    </div>
-    </div>
-    </div>
 
     <div class="footer clearfix">
         <div class="f-se w1000">
@@ -245,7 +202,7 @@
     </div>
 
 
-    <script type="text/javascript" src="http://api.map.baidu.com/api?key=&v=1.1&services=true"></script>
+
     <script src="../../js/main.js" type="text/javascript" charset="utf-8"></script>
     <script type="text/javascript">
 
@@ -253,125 +210,44 @@
             prozc();
             dd(0)
         }
-        profilescroll();
 
-        $(window).scroll(function(){
-            profilescroll();
+        $(function(){
+            culscroll()
+            scls()
+            $(window).scroll(function(){
+                culscroll();
+                jm()
+            })
         })
+        var qs = (function() {
+            var argName, args, pair, pairs, pos, query, value, _i, _len;
+            args = {};
+            query = window.location.search.substring(1);
+            pairs = query.split('&');
+            for (_i = 0, _len = pairs.length; _i < _len; _i++) {
+                pair = pairs[_i];
+                pos = pair.indexOf('=');
+                if (pos === -1) {
+                    continue;
+                }
+                argName = pair.substr(0, pos);
+                value = pair.substr(pos + 1);
+                value = decodeURIComponent(value);
+                args[argName] = value;
+            }
+            return args;
+        })()
+        function  scls(){
+            var scrollnum=qs.id;
+            if(scrollnum==0){
+                $('body,html').animate({scrollTop:$(".sixebig").offset().top},800)
+            }
+            else{
+                return false;
+            }
 
+        }
 
 </script>
-
-
-
-
-
-
-
-
-
-
-    <!--百度地图容器-->
-
-
-    <script type="text/javascript">
-        function initMap(){
-            createMap();//创建地图
-            setMapEvent();//设置地图事件
-//            addMapControl();//向地图添加控件
-            addMarker();//向地图中添加marker
-        }
-
-        //创建地图函数：
-        function createMap(){
-            var map = new BMap.Map("dituContent");//在百度地图容器中创建一个地图
-            var point = new BMap.Point(120.622042,31.342056);//定义一个中心点坐标
-            map.centerAndZoom(point,18);//设定地图的中心点和坐标并将地图显示在地图容器中
-            window.map = map;//将map变量存储在全局
-        }
-
-        //地图事件设置函数：
-        function setMapEvent(){
-            map.enableDragging();//启用地图拖拽事件，默认启用(可不写)
-            map.enableScrollWheelZoom();//启用地图滚轮放大缩小
-            map.enableDoubleClickZoom();//启用鼠标双击放大，默认启用(可不写)
-            map.enableKeyboard();//启用键盘上下左右键移动地图
-        }
-
-        //地图控件添加函数：
-        function addMapControl(){
-            //向地图中添加缩放控件
-            var ctrl_nav = new BMap.NavigationControl({anchor:BMAP_ANCHOR_TOP_LEFT,type:BMAP_NAVIGATION_CONTROL_LARGE});
-            map.addControl(ctrl_nav);
-            //向地图中添加缩略图控件
-            var ctrl_ove = new BMap.OverviewMapControl({anchor:BMAP_ANCHOR_BOTTOM_RIGHT,isOpen:1});
-            map.addControl(ctrl_ove);
-            //向地图中添加比例尺控件
-            var ctrl_sca = new BMap.ScaleControl({anchor:BMAP_ANCHOR_BOTTOM_LEFT});
-            map.addControl(ctrl_sca);
-        }
-
-        //标注点数组
-        var markerArr = [{title:"派涅尔",content:"我的备注",point:"120.622002|31.342118",isOpen:0,icon:{w:21,h:21,l:0,t:0,x:6,lb:5}}
-        ];
-        //创建marker
-        function addMarker(){
-            for(var i=0;i<markerArr.length;i++){
-                var json = markerArr[i];
-                var p0 = json.point.split("|")[0];
-                var p1 = json.point.split("|")[1];
-                var point = new BMap.Point(p0,p1);
-                var iconImg = createIcon(json.icon);
-                var marker = new BMap.Marker(point,{icon:iconImg});
-                var iw = createInfoWindow(i);
-                var label = new BMap.Label(json.title,{"offset":new BMap.Size(json.icon.lb-json.icon.x+10,-20)});
-                marker.setLabel(label);
-                map.addOverlay(marker);
-                label.setStyle({
-                    borderColor:"#808080",
-                    color:"#333",
-                    cursor:"pointer"
-                });
-
-                (function(){
-                    var index = i;
-                    var _iw = createInfoWindow(i);
-                    var _marker = marker;
-                    _marker.addEventListener("click",function(){
-                        this.openInfoWindow(_iw);
-                    });
-                    _iw.addEventListener("open",function(){
-                        _marker.getLabel().hide();
-                    })
-                    _iw.addEventListener("close",function(){
-                        _marker.getLabel().show();
-                    })
-                    label.addEventListener("click",function(){
-                        _marker.openInfoWindow(_iw);
-                    })
-                    if(!!json.isOpen){
-                        label.hide();
-                        _marker.openInfoWindow(_iw);
-                    }
-                })()
-            }
-        }
-        //创建InfoWindow
-        function createInfoWindow(i){
-            var json = markerArr[i];
-            var iw = new BMap.InfoWindow("<b class='iw_poi_title' title='" + json.title + "'>" + json.title + "</b><div class='iw_poi_content'>"+json.content+"</div>");
-            return iw;
-        }
-        //创建一个Icon
-        function createIcon(json){
-            var icon = new BMap.Icon("http://app.baidu.com/map/images/us_mk_icon.png", new BMap.Size(json.w,json.h),{imageOffset: new BMap.Size(-json.l,-json.t),infoWindowOffset:new BMap.Size(json.lb+5,1),offset:new BMap.Size(json.x,json.h)})
-            return icon;
-        }
-
-        initMap();//创建和初始化地图
-    </script>
-
-
-
 </body>
 </html>
